--- a/app/src/main/res/layout/overlay_blocker.xml
+++ b/app/src/main/res/layout/overlay_blocker.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/overlay_blocker"
-    android:layout_width="200dp"
-    android:layout_height="60dp"
-    android:background="#88FF0000"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#00000000"
     android:clickable="true"
-    android:focusable="true" />
+    android:focusable="true">
+    </FrameLayout>
