--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <!-- rounded corners -->
+
+    <!-- bordes redondeados -->
     <corners android:radius="16dp"/>
-    <!-- solid black background -->
+
+    <!-- fondo negro -->
     <solid android:color="@android:color/black"/>
+
+    <!-- borde naranja FF6300 de 2dp -->
+    <stroke
+        android:width="2dp"
+        android:color="#FF6300"/>
 </shape>
