cambios ventana notificacion
* El boton cuando está OFF es gris. Hacer lo gris, naranja.

* El botón de bloquear tiene que estar a la izquierda, escondida por las 3 barritas típicas que despliegan un panel que sale de la izquierda.

* Incluir una calculadora dentro del perfil estudiante y que esté al abrir la app.

* Cambiar los wallpaper negros por algo que contenga el logo de numbux.
** Multiwindow, homeScreen y LockScreen.

* Parpadea al cambiar el wallpaper cuando se restaura el backup.

* Notificacion cuando el wallpaper no lo cambia la app.

* la imagen de dentro de la barra de notificaciones sigue siendo muy pequeña.

La app SÍ HACE:
- Pide login para saber qué usuario eres.
- Si eres controller: solo boton para activar o desactivar.

- Si eres estudiante:
- Salta notificacion que te redirige a accesibility.
- Venta dentro de la app que te lleva a accesibility.

- Boton controller y bloqueado sincronizados en todo momento. Incluso si reinicio y no vuelvo a abrir la app.

- Cuando estoy dentro de una app y con bloqueo desactivado y turn on desde Controller, se bloquea la app.

- Si pongo el PIN la ventana desaparece y no vuelve a aparecer hasta el próximo ciclo (se resetea).

- Con el bloqueo activo, y doy al multitarea, aparece una ventana negra. Si salgo de ahí se quita. Sin el bloqueo no aparece.

- Cuando intento turn off the button manualmente, pide el pin. También se desbloquea efectivamente.

- Con el bloqueo activo, se puede buscar en ajustes, en la lupa y se puede utilizar el teclado.

- Accesibility y Uninstall son independientes del botón.

- Impide la desactivación de privilegios de accesibility sin poner el pin y para desinstalar también. Luego ya se puede desinstalar.

- La primera vez que se instala, se pregunta por la foto que se quiere guardar para backup. Justo en ese momento el botón desaparece.

- El boton de backup del wallpaper no aparece cuando lo cambia la app. Sí el usuario. Y con la app cerrada.

- Y si se cambia, se pregunta por el W

--- a/app/src/main/res/layout/dialog_enable_notification.xml
+++ b/app/src/main/res/layout/dialog_enable_notification.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@drawable/dialog_background"
     android:padding="24dp"
@@ -10,7 +11,7 @@
     <TextView
         android:id="@+id/tvDialogTitle"
         style="@style/TextAppearance.Material3.HeadlineSmall"
-        android:text="NumbuX sin Permisos"
+        android:text="Permiso de Notificaciones"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_width="match_parent"
@@ -21,10 +22,7 @@
         android:id="@+id/tvDialogMessage"
         style="@style/TextAppearance.Material3.BodyMedium"
         android:layout_marginTop="16dp"
-        android:text="Para que NumbuX funcione correctamente, ve a: \n
-        \n1. Apps Instaladas → NumbuX\n
-        \n2. ON → Permitir\n
-        \n3. Cierra y vuelve a abrir. 💯"
+        android:text="Para poder guiarte en la instalación, NumbuX necesita permiso de notificaciones.\n\nPor favor, acéptalo 😁"
         android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
