--- a/app/src/main/res/layout/dialog_enable_accessibility.xml
+++ b/app/src/main/res/layout/dialog_enable_accessibility.xml
@@ -24,7 +24,7 @@
         android:text="Para que NumbuX funcione correctamente, ve a: \n
         \n1. Apps Instaladas → NumbuX\n
         \n2. ON → Permitir\n
-        \n3. Cierra y vuelve a abrir. 💯"
+        \n3. Cierra y vuelve a abrir. 🚀"
         android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
